# cs3219-ay2526s1-project-g24

./: .dockerignore  .gitignore  COLLAB_TESTING_GUIDE.md  README.md  api-spec.yaml  docker-compose.local.yml  docker-compose.yml  judge0.conf  package-lock.json  package.json  pnpm-lock 2.yaml  pnpm-lock.yaml  setup-docker.sh  tailwind.config.js  test_all_languages_comprehensive.py  test_all_questions_comprehensive.py  test_code_execution.py  test_code_execution_comprehensive.py  test_helper_definitions.py  test_schema_migration.py
.github/workflows/: build-and-push-ghcr.yml  build-images.yml  ci-cd-pipeline.yml  ci.yml  cluster-spin-down.yml  cluster-spin-up.yml  deploy-to-cluster.yml  playwright.yml  (+1 more)
.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  trace
ai/: README.md  project-summary.md  usage-log.md
apps/code_execution_service/: .coverage  Dockerfile  README.md  pyproject.toml
apps/code_execution_service/app/: main.py
apps/code_execution_service/app/api/: router.py
apps/code_execution_service/app/core/: config.py
apps/code_execution_service/app/execution/: code_generator.py  router.py  schemas.py  service.py
apps/code_execution_service/app/middleware/: metrics.py
apps/code_execution_service/tests/: __init__.py  conftest.py  test_code_generator.py  test_integration.py  test_service.py
apps/question_service/: .coverage  .dockerignore  README.md  dockerfile  entrypoint.sh  pyproject.toml  pyproject.toml.test  run_tests.sh  seed_data.py  seed_db.py  setup_db.sh
apps/question_service/alembic/: env.py
apps/question_service/alembic/versions/: 8b57167f590e_initial_schema.py  9c4d8e2f1a3b_add_time_and_memory_limits.py  9c5452cf8705_add_soft_delete_support.py  aab900a767fa_change_time_limit_and_memory_limit_to_.py  c1d2e3f4a5b6_add_language_to_user_attempts.py  d5e6f7a8b9c0_add_deleted_at_to_questions.py
apps/question_service/app/: main.py
apps/question_service/app/api/: router.py
apps/question_service/app/core/: auth.py  code_execution_client.py  config.py  database.py  dependencies.py
apps/question_service/app/middleware/: metrics.py
apps/question_service/app/questions/: company_router.py  crud.py  data_structure_utils.py  models.py  router.py  schemas.py  test_case_router.py  topic_router.py  user_router.py
apps/question_service/tests/: README.md  conftest.py  test_company_router.py  test_crud.py  test_integration.py  test_models.py  test_question_router.py  test_topic_router.py  test_user_router.py
infra/: ARCHITECTURE.mermaid  CONTAINERIZATION_STRATEGY.mermaid  SETUP_GUIDE.md
(+364 files in other folders)
